--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <header>
-  <img class="header__logo" src="img/header-logo.png" alt="header-logo">
+  <a href="#"><img class="header__logo" src="img/header-logo.png" alt="header-logo"></a>
   <p class="header__adress">Kralja Petra I br. 35 Kragujevac</p>
   <ul class="header__links">
     <li class="header__links__jelovnik" onclick="jelovnikScroll()"><a>Jelovnik</a></li>
@@ -93,6 +93,8 @@
         <h2 class="banner__ingredients-price-main-container__ingredients">1326 kalorija | Rizoto sa sunkom, paprikom i lukom.</h2>
         <h3 class="banner__ingredients-price-main-container__price">180,00rsd</h3>
       </div>
+      <!-- order button -->
+      <button class="banner__order-button" onclick="document.getElementById('menu-button-firing-from-banner').click()">poruči</button>
     </div>
     <!--/////////////////////// End Baner ///////////////////////-->
   </div>
@@ -122,6 +124,8 @@
       <label for="licno-preuzimanje-checkbox">Lično preuzimanje</label>
     </form>
     <button class="shopping-cart__order-button" onclick="orderItems()">Poručite</button>
+    <!-- to top button -->
+    <div class="to-top-button" id="to-top-button" onclick="topFunction()"> VRATI ME NA VRH </div>
   </div>
   <!--/////////////////////// End Shopping Cart ///////////////////////-->
   <!--/////////////////////// Modal ///////////////////////-->
@@ -131,13 +135,29 @@
     <div class="modal__content">
       <!-- modal title -->
       <div class="modal__title-main-container">
-        <h1 class="modal__title-main-container__title">Hvala sto naručili</h1>
+        <h1 class="modal__title-main-container__title">Vaša porudžbina</h1>
         <span class="modal__content__close-button"><i class="fas fa-window-close"></i></span>
       </div>
       <!-- modal information -->
       <div class="modal__content__inner-content"></div>
+      <!-- e-mail form -->
+      <div class="modal__content__form-container">
+        <form action="">
+          <label class="modal__content__form-container__form-container__name-label name-label-translate" for="name">Puno Ime</label>
+          <input class="modal__content__form-container__input" type="text" id="name" name="name" placeholder="puno ime">
+
+          <label class="modal__content__form-container__form-container__name-label phone-label-translate" for="name">Telefon</label>
+          <input class="modal__content__form-container__input" type="text" id="phone" name="name" placeholder="telefon">
+
+          <label class="modal__content__form-container__form-container__name-label adress-label-translate" for="adresa">Adresa</label>
+          <input class="modal__content__form-container__input" type="text" id="email" name="adresa" placeholder="adresa">
+
+          <label class="content__comment-container__form-container__comment-text text-label-translate" for="comment">Dodatni komentar ako ga imate</label>
+          <input class="content__comment-container__form-container__input input--comment" type="text" id="comment" name="comment" placeholder="tekst komentara...">
+        </form>
+      </div>
       <!-- modal close button -->
-      <div class="modal__content__close-button-bottom">Zatvori</div>
+      <div class="modal__content__close-button-bottom">Poruči</div>
     </div>
   </div>
   <!--/////////////////////// End Modal ///////////////////////-->
@@ -158,7 +178,7 @@
         <h3 class="content__menu-container__item-container__item-ingredients">1326 kalorija | jaja, slanina, sir, kecap, lepinja.</h3>
         <div class="content__menu-container__item-container__price-button-container">
           <h3 data-price="180" class="content__menu-container__item-container__item-price">180,00rsd</h3>
-          <button class="content__menu-container__item-container__order-button" onclick="addInformation(event)"><i class="fas fa-plus-square"></i></button>
+          <button class="content__menu-container__item-container__order-button" id="menu-button-firing-from-banner" onclick="addInformation(event)"><i class="fas fa-plus-square"></i></button>
         </div>
       </div>
       <!-- item -->
