--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
       <!-- subtitle -->
       <div class="banner__subtitle-main-container">
-        <h2 class="banner__subtitle-main-container__title">Rižoto sečuan</h2>
+        <h2 class="banner__subtitle-main-container__title">Omlet 3 jaja</h2>
       </div>
       <!-- picture -->
       <div class="banner__picture-container">
